--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -32,7 +32,7 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: 'Lora', serif;
 }
 @media (min-width: 48em) {
   html {
@@ -45,6 +45,14 @@ html {
   }
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 1px 1px;
+  grid-template-areas:
+    ". . .";
+}
 
 /*
  * Sidebar
@@ -57,6 +65,9 @@ body {
 
 }
 
+img + p {
+  text-align: center;
+}
 
 .sidebar {
   text-align: center;
@@ -76,13 +87,25 @@ body {
 }
 
 /* Sidebar links */
-.sidebar a {
-  color: #fff;
+.blog-name {
+  color: rgb(255, 252, 53);
+  font-family: 'Berkshire Swash', cursive;
+}
+
+.sidebar-nav-item {
+  color: rgb(233, 233, 233);
+}
+
+.social {
+  color: rgb(233, 233, 233);
+  
 }
 
 /* About section */
 .sidebar-about h1 {
-  color: #fff;
+  position: relative;
+  bottom: 30vh;
+  color: rgb(255, 252, 53);
   margin-top: 0;
   font-family: "Abril Fatface", serif;
   font-size: 3.25rem;
@@ -137,7 +160,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .content {
-    max-width: 38rem;
+    max-width: 50rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
@@ -145,7 +168,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
   .content {
-    margin-left: 22rem;
+    margin-left: 30rem;
     margin-right: 4rem;
   }
 }
@@ -233,7 +256,7 @@ a.sidebar-nav-item:focus {
 
 /* Blue */
 .theme-base-0d .sidebar {
-  background-color: #3c50aa;
+  background-color: #353535;
 
 }
 .theme-base-0d .content a,
