--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -122,7 +122,7 @@ p {
 }
 
 strong {
-  color: #eee;
+  color: #303030;
 }
 
 
@@ -239,19 +239,12 @@ blockquote p:last-child {
   }
 }
 
-img  {
+img {
   display: block;
   width: 80%;
   max-width: 100%;
   margin: 0 3rem 1rem;
   border-radius: 5px;
-}
-
-img + em {
-  font-style: normal;
-  display: inherit;
-  text-align: center;
-  font-size: 90%;
 }
 
 /* Tables */
